font fixed on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,16 +7,16 @@
 
 @font-face {
   font-family: Mont;
-  src: url("/fonts/Mont-Regular.otf") format("opentype");
-  src: url("/fonts/Mont-Regular.woff2") format('woff2');
-  src: url("/fonts/Mont-ExtraLight.otf") format("opentype");
-  src: url("/fonts/Mont-Light.woff2") format('woff2');
-  src: url("/fonts/Mont-Black.otf") format("opentype");
-  src: url("/fonts/Mont-Black.woff2") format('woff2');
-  src: url("/fonts/Mont-Bold.otf") format("opentype");
-  src: url("/fonts/Mont-Bold.woff2") format('woff2');
-  src: url("/fonts/Mont-SemiBold.otf") format("opentype");
-  src: url("/fonts/Mont-SemiBold.woff2") format('woff2');
+  src: url("/fonts/mont/Mont-Regular.otf") format("opentype");
+  src: url("/fonts/mont/Mont-Regular.woff2") format('woff2');
+  src: url("/fonts/mont/Mont-ExtraLight.otf") format("opentype");
+  src: url("/fonts/mont/Mont-Light.woff2") format('woff2');
+  src: url("/fonts/mont/Mont-Black.otf") format("opentype");
+  src: url("/fonts/mont/Mont-Black.woff2") format('woff2');
+  src: url("/fonts/mont/Mont-Bold.otf") format("opentype");
+  src: url("/fonts/mont/Mont-Bold.woff2") format('woff2');
+  src: url("/fonts/mont/Mont-SemiBold.otf") format("opentype");
+  src: url("/fonts/mont/Mont-SemiBold.woff2") format('woff2');
 }
 
 :root {
